fixed: header overflowing when browser window is very short

--- a/viewport-header-transparent-content.scss
+++ b/viewport-header-transparent-content.scss
@@ -98,6 +98,7 @@ header {
 	overflow: hidden;
 	-webkit-transform: translate(0,0,0); /* saves 50ms on Chrome */
 	height: 100vh;
+	position: relative;
 
 }
 
